# ncnn_llm

./: .gitignore  CMakeLists.txt  readme.md
examples/: nllb_main.cpp
src/: nllb_600m.cpp
src/utils/tokenizer/: bpe_tokenizer.cpp  bpe_tokenizer.h
